--- a/react_components/package.json
+++ b/react_components/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --check src",
+    "format:fix": "prettier --write src"
   },
   "dependencies": {
     "react": "^18.2.0",
